@@ -1,18 +1,34 @@
 Including Swift Mailer (Autoloading)
 ====================================
 
-Swift Mailer uses an autoloader so the only file you need to include is the
-``lib/swift_required.php`` file.
+If you are using Composer, Swift Mailer will be automatically autoloaded.
 
-To use Swift Mailer's autoloader:
+If not, you can use the built-in autoloader by requiring the
+``swift_required.php`` file::
 
-* Put Swift Mailer somewhere accessible to your PHP scripts (this does not
-  need to be in the web root).
+    require_once '/path/to/swift-mailer/lib/swift_required.php';
 
-* Include, or require the ``lib/swift_required.php`` file.
+    /* rest of code goes here */
 
-* Follow the remainder of the documentation for using the available
-  components.
+If you want to override the default Swift Mailer configuration, call the
+``init()`` method on the ``Swift`` class and pass it a valid PHP callable (a
+PHP function name, a PHP 5.3 anonymous function, ...)::
+
+    require_once '/path/to/swift-mailer/lib/swift_required.php';
+
+    function swiftmailer_configurator() {
+        // configure Swift Mailer
+
+        Swift_DependencyContainer::getInstance()->...
+        Swift_Preferences::getInstance()->...
+    }
+
+    Swift::init('swiftmailer_configurator');
+
+    /* rest of code goes here */
+
+The advantage of using the ``init()`` method is that your code will be
+executed only if you use Swift Mailer in your script.
 
 .. note::
 
@@ -25,6 +41,6 @@ To use Swift Mailer's autoloader:
 
     .. code-block:: php
 
-        require_once '/path/to/swift-mailer/lib/swift_required.php';
+        require_once '/path/to/swift-mailer/lib/swift_init.php';
 
         /* rest of code goes here */
