@@ -20,5 +20,10 @@ define('SWIFT_REQUIRED_LOADED', true);
 //Load Swift utility class
 require dirname(__FILE__) . '/classes/Swift.php';
 
+function _swiftmailer_init()
+{
+  require dirname(__FILE__) . '/swift_init.php';
+}
+
 //Start the autoloader and lazy-load the init script to set up dependency injection
-Swift::registerAutoload(dirname(__FILE__) . '/swift_init.php');
+Swift::registerAutoload('_swiftmailer_init');
